# pcbstatorgen

./: .gitignore  Cargo.toml  PRODUCT_ARCHITECTURE.md  PRODUCT_GOALS.md  PRODUCT_PLAN.md  README.md  opencode.json  plugin_entry.py  pyproject.toml  session-ses_0b1d.md
.opencode/: active_task.json  phase4_plan.md
.opencode/agents/: build.md  kicad-addon-expert.md  kicad-ipc-expert.md  magnetics-sim-expert.md  magpylib-expert.md  pcb-motor-expert.md  product-owner.md  streamlit-expert.md  svelte-file-editor.md  tauri-interface.md
.opencode/docs/papers/: linear_fader_manifest.md
app/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: App.svelte  main.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: commands.rs  ipc.rs  main.rs
app/src/lib/: tauri.ts  types.ts
app/src/lib/components/: CoilPreview.svelte  FluxDiagram.svelte  ForceSweepPlot.svelte  KicadPanel.svelte  MagnetGradeHelper.svelte  MetricsPanel.svelte  ParameterPanel.svelte  TopologySelector.svelte  TravelDiagram.svelte  ValidationWarning.svelte
app/src/lib/stores/: config.svelte.ts
crates/pcbstatorgen-rs/: Cargo.toml  build.rs
crates/pcbstatorgen-rs/examples/: regenerate_fixture.rs
crates/pcbstatorgen-rs/src/: config.rs  foc_spec.rs  lib.rs  magnet_grades.rs  units.rs
crates/pcbstatorgen-rs/src/geometry/: coil_generators.rs  mod.rs  wave_winding.rs
crates/pcbstatorgen-rs/src/kicad/: board.rs  client.rs  commit.rs  diagnostics.rs  errors.rs  layer_map.rs  mod.rs  writer.rs
crates/pcbstatorgen-rs/src/magnetic/: coil_model.rs  force_eval.rs  magnet_model.rs  mod.rs
crates/pcbstatorgen-rs/src/physics/: mod.rs
crates/pcbstatorgen-rs/src/stackup/: friction.rs  height_stack.rs  mod.rs  power.rs
crates/pcbstatorgen-rs/tests/: kicad_client.rs  kicad_writer.rs  test_vectors.rs
docs/adr/: 0001-via-grid-generator-for-serpentine-and-sinewave.md  0002-flux-viz-via-rust-sample_b_field.md  0003-arrangement-viz-auto-refresh.md  0004-resting-position-as-real-derived-field.md  0005-coilpreview-per-layer-z-offset.md  0006-rest-offset-is-sweep-translation-not-geometry-change.md  0007-no-saved-state-serde-migration-needed-for-slice-1.md  README.md  template.md
gui/: streamlit_app.py
pcbstatorgen/: __init__.py  config.py  magnet_grades.py  serialization.py  server.py  units.py
pcbstatorgen/export/: __init__.py
pcbstatorgen/geometry/: __init__.py  coil_generators.py  end_turn.py  via_grid.py  wave_winding.py
pcbstatorgen/kicad_writer/: __init__.py  connection.py
pcbstatorgen/magnetic/: __init__.py  coil_model.py  force_eval.py  magnet_model.py
pcbstatorgen/optimization/: __init__.py
pcbstatorgen/stackup/: __init__.py  friction.py  height_stack.py  power.py
scripts/: export_test_vectors.py  run_headless.py  sync_protos.sh
scripts/fixtures/: test_vectors.json
scripts/foc_cross_validation/: README.md  compare.py  magpylib_output.html  magpylib_output.json  magpylib_reference.py  rust_reference.example.json
tests/: conftest.py  test_coil_generators.py  test_config.py  test_config_hierarchy.py  test_kicad_writer.py  test_magnet_grades.py  test_magnet_physics.py  test_magnetic.py  test_units.py  test_vernier_ratios.py  test_via_grid.py  test_wave_winding.py
tests/integration/: __init__.py
