# pcbstatorgen workspace — pure Rust physics core + Tauri desktop app.
# Phases 5+6 combined: scaffold the app shell early so Rust physics is
# developed inside a real Tauri workspace from day one.
[workspace]
resolver = "2"
members = ["crates/pcbstatorgen-rs", "app/src-tauri"]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
# Internal
pcbstatorgen-rs = { path = "crates/pcbstatorgen-rs" }
# Physics / math
magba = "=0.6.2"
nalgebra = "0.34"
rayon = "1.10"
# Serialization (shared across crates)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
