[package]
name = "pcbstatorgen-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tauri desktop host for pcbstatorgen"

[dependencies]
pcbstatorgen-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
