[package]
name = "pcbstatorgen-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Analytical magnetic field, Lorentz force, and PCB stator geometry for coreless linear motors (Rust port of pcbstatorgen)"

[dependencies]
magba = { workspace = true }
nalgebra = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = "0.14"
prost-types = "0.14"
nng = "1.0"
rand = "0.8"

[build-dependencies]
prost-build = "0.14"
protox = "0.9"

[dev-dependencies]
# Test vector loading + approximate float assertions

[lib]
name = "pcbstatorgen_rs"
path = "src/lib.rs"
